--- a/src/resources/scss/components/_menu.scss
+++ b/src/resources/scss/components/_menu.scss
@@ -1,5 +1,28 @@
 .menu {
-	a {
-		padding: 0 10px;
-	}
+    a {
+        position: relative;
+        display: inline-block;
+        color: #0db393;
+        margin: 0 5px;
+        padding: 0 10px 5px;
+        font-size: 13px;
+        font-family: 'Montserrat';
+        &:hover {
+            font-weight: bold;
+            &:after {
+                right: 0;
+            }
+        }
+        &:after {
+            content: '';
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 100%;
+            right: 100%;
+            height: 2px;
+            background-color: #0db393;
+            transition: right .2s linear;
+        }
+    }
 }
