--- a/src/resources/scss/styles.scss
+++ b/src/resources/scss/styles.scss
@@ -1,18 +1,20 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:900");
+@import url('https://fonts.googleapis.com/css?family=Bungee|Montserrat|Open+Sans&display=swap');
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-        "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
+    font-family: 'Bungee', 'Montserrat', 'Open Sans',  -apple-system, BlinkMacSystemFont,  "Roboto", "Droid Sans", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    color: #000;
 }
 
-
 a {
-    color: #0db393;
     text-decoration: none;
+}
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
   
 
