profile style modify

--- a/src/resources/scss/_layout.scss
+++ b/src/resources/scss/_layout.scss
@@ -11,16 +11,15 @@
 	height: 70px;
 	padding: 0 25px;
 	box-sizing: border-box;
+	background-color: #fff;
 }
 
 .section {
 	&-home {
-
 	}
 	&-profile {
 		background-color: #f2f2f2;
 	}
 	&-projects {
-
 	}
 }
